--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
  --safe-top: env(safe-area-inset-top);
  --safe-bottom: env(safe-area-inset-bottom);
 }
-
 body{
  margin:0;
  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text",Helvetica,Arial,sans-serif;
@@ -20,21 +19,19 @@ body{
  height:100vh;
  overflow:hidden;
 }
-
 .header{
- padding:calc(20px + var(--safe-top)) 16px 10px;
+ padding:calc(18px + var(--safe-top)) 12px 8px;
  background:linear-gradient(180deg,#0a3a78,#0f62c8);
  color:white;
  text-align:center;
 }
-
-.date{font-size:22px;font-weight:700;}
-.week{font-size:14px;opacity:.85;}
-.clock{font-size:36px;font-weight:800;margin-top:4px;}
+.date{font-size:20px;font-weight:700;}
+.week{font-size:13px;opacity:.85;}
+.clock{font-size:34px;font-weight:800;margin-top:4px;}
 
 .container{
- padding:12px;
- height:calc(100vh - 150px - var(--safe-bottom));
+ padding:10px;
+ height:calc(100vh - 140px - var(--safe-bottom));
  display:grid;
  grid-template-rows:repeat(6,1fr);
  gap:10px;
@@ -42,32 +39,22 @@ body{
 
 .class{
  background:white;
- border-radius:18px;
- padding:14px;
- box-shadow:0 6px 18px rgba(0,0,0,.1);
+ border-radius:16px;
+ padding:12px;
+ box-shadow:0 4px 14px rgba(0,0,0,.12);
  border-left:6px solid transparent;
  display:flex;
  flex-direction:column;
  justify-content:center;
 }
 
-.current{
- background:#eafff1;
- border-left-color:#34c759;
-}
+.current{background:#eafff1;border-left-color:#34c759;}
+.next{border-left-color:#0a84ff;}
+.lunch{background:#fff3cd;border-left-color:#ffcc00;}
 
-.next{
- border-left-color:#0a84ff;
-}
-
-.lunch{
- background:#fff3cd;
- border-left-color:#ffcc00;
-}
-
-.time{color:#666;font-size:13px;}
-.title{font-size:18px;font-weight:700;}
-.room{color:#777;}
+.time{color:#666;font-size:12px;}
+.title{font-size:17px;font-weight:700;}
+.room{color:#777;font-size:13px;}
 </style>
 </head>
 
@@ -82,37 +69,50 @@ body{
 <div class="container" id="schedule"></div>
 
 <script>
-// 12-hour clock
+// 12-hour clock (old iOS safe)
 function updateClock(){
- var now=new Date();
- var h=now.getHours();
- var m=now.getMinutes();
- var ampm=h>=12?"PM":"AM";
+ var n=new Date();
+ var h=n.getHours();
+ var m=n.getMinutes();
+ var a=h>=12?"PM":"AM";
  h=h%12; if(h==0) h=12;
  if(m<10) m="0"+m;
- document.getElementById("clock").innerText=h+":"+m+" "+ampm;
+ document.getElementById("clock").innerText=h+":"+m+" "+a;
 }
 setInterval(updateClock,1000);
 updateClock();
 
-// Fix weekends → next Monday
+// Today (skip weekends)
 var today=new Date();
 if(today.getDay()==6) today.setDate(today.getDate()+2);
 if(today.getDay()==0) today.setDate(today.getDate()+1);
 
-// Manual date formatting (old iPad safe)
+// Manual date formatting
 var days=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
 var months=["January","February","March","April","May","June","July","August","September","October","November","December"];
 document.getElementById("date").innerText=
  days[today.getDay()]+", "+months[today.getMonth()]+" "+today.getDate()+", "+today.getFullYear();
 
-// Week calculation
+// Week calc
 var week1Start=new Date(2026,0,5);
 var diff=Math.floor((today-week1Start)/86400000);
-var weekNum=Math.floor(diff/7)%2==0?1:2;
+var weekNum=(Math.floor(diff/7)%2==0)?1:2;
 document.getElementById("week").innerText="Week "+weekNum;
 
-// SCHEDULE DATA
+// Time parser (iOS safe)
+function parseTime(t){
+ var p=t.split(" ");
+ var hm=p[0].split(":");
+ var h=parseInt(hm[0]);
+ var m=parseInt(hm[1]);
+ if(p[1]=="PM" && h!=12) h+=12;
+ if(p[1]=="AM" && h==12) h=0;
+ var d=new Date(today);
+ d.setHours(h,m,0,0);
+ return d;
+}
+
+// Schedules
 var week1={
 1:[["8:20 AM","9:20 AM","Core French 8","Room #4"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
 2:[["8:20 AM","9:20 AM","Physical Education 8","Gym"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Science 8","Room #6"],["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
@@ -129,32 +129,37 @@ var week2={
 5:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Health Education 8","Room #8"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],["12:50 PM","1:50 PM","English Language Arts 8","Room #8"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]]
 };
 
-var daySchedule=(weekNum==1?week1:week2)[today.getDay()];
+// Get today safely
+var day=today.getDay();
+if(day==0 || day==6) day=1;
 
-// Insert lunch
-var final=[];
-daySchedule.forEach(c=>{
- final.push(c);
- if(c[1]=="11:20 AM") final.push(["11:20 AM","12:50 PM","Lunch",""]);
+var raw=(weekNum==1?week1:week2)[day];
+
+// Add Lunch
+var schedule=[];
+raw.forEach(function(c){
+ schedule.push(c);
+ if(c[1]=="11:20 AM") schedule.push(["11:20 AM","12:50 PM","Lunch",""]);
 });
 
+// Render
 var now=new Date();
 var next=false;
 
-final.forEach(c=>{
- var s=new Date(today.toDateString()+" "+c[0]);
- var e=new Date(today.toDateString()+" "+c[1]);
+schedule.forEach(function(c){
+ var s=parseTime(c[0]);
+ var e=parseTime(c[1]);
  var cls="class";
  if(c[2]=="Lunch") cls+=" lunch";
  if(now>=s && now<=e) cls+=" current";
  else if(now<s && !next){cls+=" next"; next=true;}
 
  document.getElementById("schedule").innerHTML+=
- `<div class="${cls}">
-   <div class="time">${c[0]} – ${c[1]}</div>
-   <div class="title">${c[2]}</div>
-   <div class="room">${c[3]}</div>
-  </div>`;
+ '<div class="'+cls+'">'+
+ '<div class="time">'+c[0]+' – '+c[1]+'</div>'+
+ '<div class="title">'+c[2]+'</div>'+
+ '<div class="room">'+c[3]+'</div>'+
+ '</div>';
 });
 </script>
 
