--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@ body{
 .clock{font-size:34px;font-weight:800;margin-top:4px;}
 
 .container{
- padding:10px;
- height:calc(100vh - 140px - var(--safe-bottom));
- display:grid;
- grid-template-rows:repeat(6,1fr);
- gap:10px;
+  padding:12px;
+  height:calc(100vh - 150px - var(--safe-bottom));
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+}
+.class{
+  flex:1;
 }
 
 .class{
