--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@ body{
 .week{font-size:13px;opacity:.85;}
 .clock{font-size:34px;font-weight:800;margin-top:4px;}
 
-.container{
+..container{
   padding:12px;
   height:calc(100vh - 150px - var(--safe-bottom));
   display:flex;
   flex-direction:column;
   gap:12px;
 }
-.class{
-  flex:1;
-}
 
 .class{
- background:white;
- border-radius:16px;
- padding:12px;
- box-shadow:0 4px 14px rgba(0,0,0,.12);
- border-left:6px solid transparent;
- display:flex;
- flex-direction:column;
- justify-content:center;
-}
+  background:white;
+  border-radius:16px;
+  padding:14px;
+  box-shadow:0 4px 14px rgba(0,0,0,.12);
+  border-left:6px solid transparent;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
 
+  /* KEY FIX */
+  min-height:60px;      /* ensures each block has breathing room */
+  flex-grow:1;          /* allows it to expand if space is available */
+}
 .current{background:#eafff1;border-left-color:#34c759;}
 .next{border-left-color:#0a84ff;}
 .lunch{background:#fff3cd;border-left-color:#ffcc00;}
