--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@ body{
 .week{font-size:13px;opacity:.85;}
 .clock{font-size:34px;font-weight:800;margin-top:4px;}
 
-..container{
+.container{
   padding:12px;
   height:calc(100vh - 150px - var(--safe-bottom));
   display:flex;
   flex-direction:column;
   gap:12px;
+  overflow-y:auto; /* allow scrolling if needed */
 }
 
 .class{
@@ -47,9 +48,7 @@ body{
   flex-direction:column;
   justify-content:center;
 
-  /* KEY FIX */
-  min-height:60px;      /* ensures each block has breathing room */
-  flex-grow:1;          /* allows it to expand if space is available */
+  min-height:100px; /* fixed readable height */
 }
 .current{background:#eafff1;border-left-color:#34c759;}
 .next{border-left-color:#0a84ff;}
