--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@ body{
 .date{font-size:20px;font-weight:700;}
 .week{font-size:13px;opacity:.85;}
 .clock{font-size:34px;font-weight:800;margin-top:4px;}
-
 .container{
   padding:12px;
   height:calc(100vh - 150px - var(--safe-bottom));
   display:flex;
   flex-direction:column;
   gap:12px;
-  overflow-y:auto; /* allow scrolling if needed */
 }
 
 .class{
@@ -48,7 +46,9 @@ body{
   flex-direction:column;
   justify-content:center;
 
-  min-height:100px; /* fixed readable height */
+  /* KEY FIX */
+  min-height:60px;      /* ensures each block has breathing room */
+  flex-grow:1;          /* allows it to expand if space is available */
 }
 .current{background:#eafff1;border-left-color:#34c759;}
 .next{border-left-color:#0a84ff;}
