--- a/index.html
+++ b/index.html
@@ -28,24 +28,22 @@ body{
 }
 
 .container {
-  padding:12px;
-  height: calc(100vh - 140px - env(safe-area-inset-bottom));
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* space blocks evenly */
+  padding:16px;
+  overflow-y:auto;      /* allows scrolling */
+  display:flex;
+  flex-direction:column;
+  gap:12px;             /* spacing between blocks */
 }
 
 .class {
+  min-height:100px;     /* readable size */
   background:white;
-  border-radius:18px;
+  border-radius:16px;
   padding:14px;
-  box-shadow:0 6px 18px rgba(0,0,0,.1);
-  border-left:6px solid transparent;
+  box-shadow:0 4px 14px rgba(0,0,0,.12);
   display:flex;
   flex-direction:column;
   justify-content:center;
-  min-height:60px;   /* ensures readable text */
-  margin-bottom:12px; /* space between blocks */
 }
 
 .class:last-child {
