--- a/index.html
+++ b/index.html
@@ -24,42 +24,55 @@ body{
   background: linear-gradient(180deg,#0a3a78,#0f62c8);
   color: white;
   text-align: center;
-
-  font-weight: 900;      /* make header text bold */
 }
 
 .date {
-  font-size: 24px;       /* slightly bigger than before */
-  font-weight: 700;      /* keeps it bold */
+  font-size: 24px;       /* slightly bigger */
+  font-weight: 700;      /* bold */
 }
 
 .clock {
-  font-size: 38px;       /* slightly bigger clock */
+  font-size: 38px;       /* slightly bigger */
   font-weight: 800;
 }
 
 .week {
-  font-size: 16px;       /* slightly bigger week text */
+  font-size: 16px;
   opacity: 0.85;
 }
 
 .container {
-  padding:16px;
-  overflow-y:auto;      /* allows scrolling */
-  display:flex;
-  flex-direction:column;
-  gap:12px;             /* spacing between blocks */
+  padding: 12px;
+  height: calc(100vh - 150px - env(safe-area-inset-bottom));
+  display: flex;
+  flex-direction: column;
+  gap: 12px; /* spacing between blocks */
 }
 
 .class {
-  min-height:100px;     /* readable size */
-  background:white;
-  border-radius:16px;
-  padding:14px;
-  box-shadow:0 4px 14px rgba(0,0,0,.12);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+  background: white;
+  border-radius: 18px;
+  padding: 14px;
+  box-shadow: 0 6px 18px rgba(0,0,0,.1);
+  border-left: 6px solid transparent; /* default left tab */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 60px; /* ensures readable size */
+}
+
+.current {
+  border-left-color: #34c759; /* green tab for current */
+  background: #eafff1;
+}
+
+.next {
+  border-left-color: #0a84ff; /* blue tab for next */
+}
+
+.lunch {
+  border-left-color: #ffcc00; /* orange tab for lunch */
+  background: #fff3cd;
 }
 
 .class:last-child {
