--- a/index.html
+++ b/index.html
@@ -11,46 +11,62 @@ body{
  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",Arial,sans-serif;
  background:#f2f2f7;
  height:100vh;
- overflow:hidden;
  display:flex;
  flex-direction:column;
 }
+
 .header{
- padding:20px;
+ padding:16px;
  background:#0f62c8;
  color:white;
  text-align:center;
- flex-shrink:0;
 }
-.date{font-size:22px;font-weight:bold;}
-.week{font-size:14px;opacity:0.8;}
-.clock{font-size:36px;font-weight:bold;margin-top:6px;}
+
+.date{
+ font-size:clamp(20px,4vw,42px);
+ font-weight:bold;
+}
+.week{font-size:14px;opacity:.85}
+.clock{
+ font-size:clamp(32px,6vw,64px);
+ font-weight:bold;
+ margin-top:6px;
+}
 
 .container{
- padding:12px;
- flex-grow:1;
- overflow-y:auto;
- display:flex;
- flex-direction:column;
- justify-content:flex-start;
+ flex:1;
+ padding:10px;
+ display:grid;
+ grid-template-rows:repeat(6,1fr);
+ gap:10px;
 }
+
 .class{
  background:white;
  border-radius:16px;
- padding:20px;
- margin-bottom:16px;
+ padding:12px;
  border-left:6px solid transparent;
- flex-shrink:0;
- min-height:100px; /* bigger boxes */
  display:flex;
  flex-direction:column;
  justify-content:center;
 }
+
 .current{border-left-color:#34c759;background:#eafff1;}
 .next{border-left-color:#0a84ff;}
-.time{color:#666;font-size:16px;margin-bottom:6px;}
-.title{font-size:22px;font-weight:bold;margin-bottom:4px;}
-.room{color:#777;font-size:16px;}
+
+.time{
+ color:#666;
+ font-size:clamp(14px,2.2vw,22px);
+}
+.title{
+ font-weight:bold;
+ font-size:clamp(18px,3vw,34px);
+}
+.room{
+ color:#777;
+ font-size:clamp(14px,2vw,22px);
+}
+.room:empty{display:none;}
 </style>
 </head>
 
@@ -65,79 +81,58 @@ body{
 <div class="container" id="schedule"></div>
 
 <script>
-// Clock function - 12-hour format with AM/PM
 function updateClock(){
-  var now = new Date();
-  var hours = now.getHours();
-  var minutes = now.getMinutes();
-  var ampm = hours >= 12 ? 'PM' : 'AM';
-  hours = hours % 12;
-  if(hours === 0) hours = 12; // handle midnight/noon
-  if(minutes < 10) minutes = '0' + minutes;
-  document.getElementById("clock").innerText = hours + ":" + minutes + " " + ampm;
+ let n=new Date();
+ let h=n.getHours(),m=n.getMinutes();
+ let a=h>=12?"PM":"AM";
+ h=h%12||12; m=m<10?"0"+m:m;
+ document.getElementById("clock").innerText=h+":"+m+" "+a;
 }
-setInterval(updateClock,1000);
-updateClock();
+setInterval(updateClock,1000); updateClock();
 
-// Schedule data
-var week1Start = new Date(2026,0,5);
+let week1Start=new Date(2026,0,5);
 
-var week1 = {
-1:[["8:20 AM","9:20 AM","Core French 8","Room #4"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
-2:[["8:20 AM","9:20 AM","Physical Education 8","Gym"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Science 8","Room #6"],["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
-3:[["8:20 AM","9:20 AM","English Language Arts 8","Room #8"],["9:20 AM","10:20 AM","Food & Nutrition 8","Room 15B"],["10:20 AM","11:20 AM","Core French 8","Room #4"],["12:50 PM","1:50 PM","Health Education 8","Room #8"],["1:50 PM","2:50 PM","Mathematics 8","Room #6"]],
-4:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Core French 8","Room #4"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
-5:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]]
+let L=["11:20 AM","12:50 PM","Lunch",""];
+
+let week1={
+1:[["8:20 AM","9:20 AM","Core French 8","Room #4"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
+2:[["8:20 AM","9:20 AM","Physical Education 8","Gym"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Science 8","Room #6"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
+3:[["8:20 AM","9:20 AM","English Language Arts 8","Room #8"],["9:20 AM","10:20 AM","Food & Nutrition 8","Room 15B"],["10:20 AM","11:20 AM","Core French 8","Room #4"],L,["12:50 PM","1:50 PM","Health Education 8","Room #8"],["1:50 PM","2:50 PM","Mathematics 8","Room #6"]],
+4:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Core French 8","Room #4"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
+5:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]]
 };
 
-var week2 = {
-1:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],["12:50 PM","1:50 PM","Physical Education 8","Gym"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
-2:[["8:20 AM","9:20 AM","Health Education 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","Technology Education 8","Room 15A"]],
-3:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Core French 8","Room #4"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]],
-4:[["8:20 AM","9:20 AM","Science 8","Room #6"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Mathematics 8","Room #6"],["12:50 PM","1:50 PM","Core French 8","Room #4"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
-5:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Health Education 8","Room #8"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],["12:50 PM","1:50 PM","English Language Arts 8","Room #8"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]]
+let week2={
+1:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Physical Education 8","Gym"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
+2:[["8:20 AM","9:20 AM","Health Education 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","Technology Education 8","Room 15A"]],
+3:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Core French 8","Room #4"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]],
+4:[["8:20 AM","9:20 AM","Science 8","Room #6"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Mathematics 8","Room #6"],L,["12:50 PM","1:50 PM","Core French 8","Room #4"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
+5:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Health Education 8","Room #8"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","English Language Arts 8","Room #8"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]]
 };
 
-// Get today
-var today = new Date();
-if(today.getDay()==6) today.setDate(today.getDate()+2);
-if(today.getDay()==0) today.setDate(today.getDate()+1);
+let today=new Date();
+if(today.getDay()==6)today.setDate(today.getDate()+2);
+if(today.getDay()==0)today.setDate(today.getDate()+1);
 
-// Manual weekday names
-var weekdays = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
-var months = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+let diff=Math.floor((today-week1Start)/86400000);
+let weekNum=(Math.floor(diff/7)%2==0)?1:2;
+document.getElementById("week").innerText="Week "+weekNum;
 
-var formattedDate = weekdays[today.getDay()] + ", " +
-                    months[today.getMonth()] + " " +
-                    today.getDate() + ", " +
-                    today.getFullYear();
+let d=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+let m=["January","February","March","April","May","June","July","August","September","October","November","December"];
+document.getElementById("date").innerText=d[today.getDay()]+", "+m[today.getMonth()]+" "+today.getDate()+", "+today.getFullYear();
 
-document.getElementById("date").innerText = formattedDate;
+let sched=(weekNum==1?week1:week2)[today.getDay()];
+let now=new Date(); let next=false;
 
-// Determine week number
-var diff = Math.floor((today-week1Start)/86400000);
-var weekNum = Math.floor(diff/7)%2==0 ? 1 : 2;
-document.getElementById("week").innerText = "Week " + weekNum;
-
-// Display schedule
-var schedule = (weekNum==1?week1:week2)[today.getDay()];
-var nowTime = new Date();
-var next = false;
-
-for(var i=0;i<schedule.length;i++){
- var c = schedule[i];
- var s = new Date(today.toDateString()+" "+c[0]);
- var e = new Date(today.toDateString()+" "+c[1]);
- var cls = "class";
- if(nowTime>=s && nowTime<=e) cls += " current";
- else if(nowTime<s && !next){cls += " next"; next=true;}
- 
- document.getElementById("schedule").innerHTML +=
-  '<div class="'+cls+'">'+
-  '<div class="time">'+c[0]+' – '+c[1]+'</div>'+
-  '<div class="title">'+c[2]+'</div>'+
-  '<div class="room">'+c[3]+'</div>'+
-  '</div>';
+for(let c of sched){
+ let s=new Date(today.toDateString()+" "+c[0]);
+ let e=new Date(today.toDateString()+" "+c[1]);
+ let cls="class";
+ if(now>=s&&now<=e)cls+=" current";
+ else if(now<s&&!next){cls+=" next";next=true;}
+ document.getElementById("schedule").innerHTML+=
+ `<div class="${cls}"><div class="time">${c[0]} – ${c[1]}</div><div class="title">${c[2]}</div><div class="room">${c[3]}</div></div>`;
 }
 </script>
 
