--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 body{
  margin:0;
- font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",Arial,sans-serif;
+ font-family:-apple-system,BlinkMacSystemFont,Arial;
  background:#f2f2f7;
  height:100vh;
  display:flex;
@@ -16,56 +16,41 @@ body{
 }
 
 .header{
- padding:16px;
+ padding:14px;
  background:#0f62c8;
  color:white;
  text-align:center;
 }
 
-.date{
- font-size:clamp(20px,4vw,42px);
- font-weight:bold;
-}
-.week{font-size:14px;opacity:.85}
-.clock{
- font-size:clamp(32px,6vw,64px);
- font-weight:bold;
- margin-top:6px;
-}
+.date{font-size:26px;font-weight:bold;}
+.week{font-size:14px;opacity:.8;}
+.clock{font-size:48px;font-weight:bold;margin-top:6px;}
 
 .container{
  flex:1;
- padding:10px;
- display:grid;
- grid-template-rows:repeat(6,1fr);
- gap:10px;
+ padding:8px;
+ display:flex;
+ flex-direction:column;
 }
 
 .class{
  background:white;
- border-radius:16px;
- padding:12px;
+ border-radius:14px;
+ padding:10px;
+ margin-bottom:8px;
  border-left:6px solid transparent;
  display:flex;
  flex-direction:column;
  justify-content:center;
+ flex:1;
 }
 
 .current{border-left-color:#34c759;background:#eafff1;}
 .next{border-left-color:#0a84ff;}
 
-.time{
- color:#666;
- font-size:clamp(14px,2.2vw,22px);
-}
-.title{
- font-weight:bold;
- font-size:clamp(18px,3vw,34px);
-}
-.room{
- color:#777;
- font-size:clamp(14px,2vw,22px);
-}
+.time{color:#666;font-size:16px;}
+.title{font-size:22px;font-weight:bold;}
+.room{color:#777;font-size:16px;}
 .room:empty{display:none;}
 </style>
 </head>
@@ -82,19 +67,20 @@ body{
 
 <script>
 function updateClock(){
- let n=new Date();
- let h=n.getHours(),m=n.getMinutes();
- let a=h>=12?"PM":"AM";
- h=h%12||12; m=m<10?"0"+m:m;
- document.getElementById("clock").innerText=h+":"+m+" "+a;
+ var n=new Date();
+ var h=n.getHours(),m=n.getMinutes();
+ var a=h>=12?"PM":"AM";
+ h=h%12; if(h==0)h=12;
+ if(m<10)m="0"+m;
+ document.getElementById("clock").innerHTML=h+":"+m+" "+a;
 }
-setInterval(updateClock,1000); updateClock();
+setInterval(updateClock,1000);
+updateClock();
 
-let week1Start=new Date(2026,0,5);
+var week1Start=new Date(2026,0,5);
+var L=["11:20 AM","12:50 PM","Lunch",""];
 
-let L=["11:20 AM","12:50 PM","Lunch",""];
-
-let week1={
+var week1={
 1:[["8:20 AM","9:20 AM","Core French 8","Room #4"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]],
 2:[["8:20 AM","9:20 AM","Physical Education 8","Gym"],["9:20 AM","10:20 AM","English Language Arts 8","Room #8"],["10:20 AM","11:20 AM","Science 8","Room #6"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
 3:[["8:20 AM","9:20 AM","English Language Arts 8","Room #8"],["9:20 AM","10:20 AM","Food & Nutrition 8","Room 15B"],["10:20 AM","11:20 AM","Core French 8","Room #4"],L,["12:50 PM","1:50 PM","Health Education 8","Room #8"],["1:50 PM","2:50 PM","Mathematics 8","Room #6"]],
@@ -102,7 +88,7 @@ let week1={
 5:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]]
 };
 
-let week2={
+var week2={
 1:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Scheduling Need","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Physical Education 8","Gym"],["1:50 PM","2:50 PM","Band Instruments 8","Library"]],
 2:[["8:20 AM","9:20 AM","Health Education 8","Room #8"],["9:20 AM","10:20 AM","Mathematics 8","Room #6"],["10:20 AM","11:20 AM","English Language Arts 8","Room #8"],L,["12:50 PM","1:50 PM","Science 8","Room #6"],["1:50 PM","2:50 PM","Technology Education 8","Room 15A"]],
 3:[["8:20 AM","9:20 AM","Social Studies 8","Room #8"],["9:20 AM","10:20 AM","Core French 8","Room #4"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","Mathematics 8","Room #6"],["1:50 PM","2:50 PM","English Language Arts 8","Room #8"]],
@@ -110,29 +96,31 @@ let week2={
 5:[["8:20 AM","9:20 AM","Mathematics 8","Room #6"],["9:20 AM","10:20 AM","Health Education 8","Room #8"],["10:20 AM","11:20 AM","Physical Education 8","Gym"],L,["12:50 PM","1:50 PM","English Language Arts 8","Room #8"],["1:50 PM","2:50 PM","Social Studies 8","Room #8"]]
 };
 
-let today=new Date();
+var today=new Date();
 if(today.getDay()==6)today.setDate(today.getDate()+2);
 if(today.getDay()==0)today.setDate(today.getDate()+1);
 
-let diff=Math.floor((today-week1Start)/86400000);
-let weekNum=(Math.floor(diff/7)%2==0)?1:2;
-document.getElementById("week").innerText="Week "+weekNum;
+var diff=Math.floor((today-week1Start)/86400000);
+var weekNum=(Math.floor(diff/7)%2==0)?1:2;
+document.getElementById("week").innerHTML="Week "+weekNum;
 
-let d=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
-let m=["January","February","March","April","May","June","July","August","September","October","November","December"];
-document.getElementById("date").innerText=d[today.getDay()]+", "+m[today.getMonth()]+" "+today.getDate()+", "+today.getFullYear();
+var days=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
+var months=["January","February","March","April","May","June","July","August","September","October","November","December"];
+document.getElementById("date").innerHTML=days[today.getDay()]+", "+months[today.getMonth()]+" "+today.getDate()+", "+today.getFullYear();
 
-let sched=(weekNum==1?week1:week2)[today.getDay()];
-let now=new Date(); let next=false;
+var sched=(weekNum==1?week1:week2)[today.getDay()];
+var now=new Date();
+var next=false;
 
-for(let c of sched){
- let s=new Date(today.toDateString()+" "+c[0]);
- let e=new Date(today.toDateString()+" "+c[1]);
- let cls="class";
- if(now>=s&&now<=e)cls+=" current";
- else if(now<s&&!next){cls+=" next";next=true;}
+for(var i=0;i<sched.length;i++){
+ var c=sched[i];
+ var s=new Date(today.toDateString()+" "+c[0]);
+ var e=new Date(today.toDateString()+" "+c[1]);
+ var cls="class";
+ if(now>=s && now<=e)cls+=" current";
+ else if(now<s && !next){cls+=" next";next=true;}
  document.getElementById("schedule").innerHTML+=
- `<div class="${cls}"><div class="time">${c[0]} – ${c[1]}</div><div class="title">${c[2]}</div><div class="room">${c[3]}</div></div>`;
+ '<div class="'+cls+'"><div class="time">'+c[0]+' – '+c[1]+'</div><div class="title">'+c[2]+'</div><div class="room">'+c[3]+'</div></div>';
 }
 </script>
 
